chore(controller): 컨트롤러 리팩토링, swagger autogen 적용을 위한 주석 및 코드 변경
