# src/swagger/swagger-output.json
@@ -34,7 +34,26 @@
     "/api/user/stock": {
       "patch": {
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "cnt": {
+                  "example": "any"
+                },
+                "stockName": {
+                  "example": "any"
+                },
+                "type": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
